# CW_5

./: README.md  main.py  pyproject.toml
db_manager/: db_manager.py
fill_DB/: create_db.sql  create_tables.py  fill_database.py
