[tool.poetry]
name = "cw-5"
version = "0.1.0"
description = ""
authors = ["Alexandr(Serious) <sanekzh01@gmail.com>"]
readme = "README.md"
packages = [{include = "cw_5"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
